--- a/app/selfserve/module/Olcs/view/error/index.phtml
+++ b/app/selfserve/module/Olcs/view/error/index.phtml
@@ -11,7 +11,7 @@
           <div class="article">
               <?php echo $this->translate('markup-500-text'); ?>
               <hr>
-              <p><a href="<?php echo $this->url('index'); ?>"><?php echo $this->translate('back-to-home'); ?></a></p>
+              <p><?php echo $this->link($this->url('index'), 'back-to-home'); ?></p>
           </div>
       </div>
     </div>
