--- a/app/selfserve/module/Olcs/view/olcs/uploads/partial/detail-processing.phtml
+++ b/app/selfserve/module/Olcs/view/olcs/uploads/partial/detail-processing.phtml
@@ -16,5 +16,4 @@
         );
     ?>
 </div>
-
-<a href="<?php echo $this->url('bus-registration');?>"><?php echo $this->translate('back-to-ebsr-uploads'); ?></a>
+<?php echo $this->link($this->url('bus-registration'), 'back-to-ebsr-uploads'); ?>
