--- a/app/selfserve/module/Olcs/view/pages/licence-surrender.phtml
+++ b/app/selfserve/module/Olcs/view/pages/licence-surrender.phtml
@@ -43,9 +43,7 @@
                 <?php
                 if (isset($this->bottomLink)): ?>
                     <p>
-                        <a href="<?php echo $this->bottomLink ?>">
-                            <?php echo $this->translate($this->bottomText); ?>
-                        </a>
+                        <?php echo $this->link($this->bottomLink, $this->bottomText); ?>
                     </p>
                 <?php endif; ?>
             </div>
