--- a/app/selfserve/module/Olcs/view/partials/entity-view/entity-details-nav-anonymous.phtml
+++ b/app/selfserve/module/Olcs/view/partials/entity-view/entity-details-nav-anonymous.phtml
@@ -1,19 +1,18 @@
 <h4><?php echo $this->translate('search-result-on-this-page'); ?></h4>
 <ul class="vertical-navigation">
   <li>
-    <a href="#licence-details"><?php echo $this->translate('search-result-nav-licence-details'); ?></a>
+      <?php echo $this->link('#licence-details', 'search-result-nav-licence-details'); ?>
   </li>
   <li>
-    <a href="#contact-details"><?php echo $this->translate('search-result-nav-contact-details'); ?></a>
+      <?php echo $this->link('#contact-details', 'search-result-nav-contact-details'); ?>
   </li>
   <li>
-    <a href="#operating-centres"><?php echo $this->translate('search-result-nav-operating-centres'); ?></a>
+      <?php echo $this->link('#operating-centres', 'search-result-nav-operating-centres'); ?>
   </li>
   <li>
-    <a href="#transport-managers"><?php echo $this->translate('search-result-nav-transport-managers'); ?></a>
+      <?php echo $this->link('#transport-managers', 'search-result-nav-transport-managers'); ?>
   </li>
   <li>
-    <a href="#related-operator-licences"><?php echo $this->translate('search-result-nav-related-operator-licences');
-    ?></a>
+      <?php echo $this->link('#related-operator-licences', 'search-result-nav-related-operator-licences'); ?>
   </li>
 </ul>
