--- a/app/selfserve/module/Olcs/view/partials/entity-view/entity-details-nav-partner.phtml
+++ b/app/selfserve/module/Olcs/view/partials/entity-view/entity-details-nav-partner.phtml
@@ -1,34 +1,30 @@
 <h4><?php echo $this->translate('entity-details-on-this-page'); ?></h4>
 <ul class="vertical-navigation">
     <li>
-        <a href="#licence-details"><?php echo $this->translate('entity-details-nav-licence-details'); ?></a>
+        <?php echo $this->link('#licence-details', 'entity-details-nav-licence-details'); ?>
     </li>
     <li>
-        <a href="#contact-details"><?php echo $this->translate('entity-details-nav-contact-details'); ?></a>
+        <?php echo $this->link('#contact-details', 'entity-details-nav-contact-details'); ?>
     </li>
     <li>
-        <a href="#company-details"><?php echo $this->translate('entity-details-nav-company-details'); ?></a>
+        <?php echo $this->link('#company-details', 'entity-details-nav-company-details'); ?>
     </li>
     <li>
-        <a href="#operating-centres"><?php echo $this->translate('entity-details-nav-operating-centres'); ?></a>
+        <?php echo $this->link('#operating-centres', 'entity-details-nav-operating-centres'); ?>
     </li>
     <li>
-        <a href="#transport-managers"><?php echo $this->translate('entity-details-nav-transport-managers'); ?></a>
+        <?php echo $this->link('#transport-managers', 'entity-details-nav-transport-managers'); ?>
     </li>
     <li>
-        <a href="#related-operator-licences"><?php echo $this->translate('entity-details-nav-related-operator-licences');
-            ?></a>
+        <?php echo $this->link('#related-operator-licences', 'entity-details-nav-related-operator-licences'); ?>
     </li>
     <li>
-        <a href="#vehicles"><?php echo $this->translate('entity-details-nav-vehicles');
-            ?></a>
+        <?php echo $this->link('#vehicles', 'entity-details-nav-vehicles'); ?>
     </li>
     <li>
-        <a href="#current-applications"><?php echo $this->translate('entity-details-nav-current-applications');
-            ?></a>
+        <?php echo $this->link('#current-applications', 'entity-details-nav-current-applications'); ?>
     </li>
     <li>
-        <a href="#conditions-undertakings"><?php echo $this->translate('entity-details-nav-conditions-undertakings');
-            ?></a>
+        <?php echo $this->link('#conditions-undertakings', 'entity-details-nav-conditions-undertakings'); ?>
     </li>
 </ul>
