--- a/app/selfserve/module/Olcs/view/partials/tabs-nav.phtml
+++ b/app/selfserve/module/Olcs/view/partials/tabs-nav.phtml
@@ -4,7 +4,7 @@
     <?php if ($page->isVisible(true) && $this->navigation()->accept($page, false)): ?>
       <li class="govuk-tabs__list-item<?php echo $page->isActive(true) ? ' govuk-tabs__list-item--selected' : '';?>">
         <a href="<?php echo $page->getHref(); ?>" class="govuk-tabs__tab">
-        <?php echo $this->translate($page->getLabel()); ?>
+        <?php echo $this->escapeHtml($this->translate($page->getLabel())); ?>
         <?php echo $page->get('count') ? '('.$page->get('count').')' : '';?>
         </a>
       </li>
