--- a/app/selfserve/module/Permits/view/permits/permits/irhp-fee.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/irhp-fee.phtml
@@ -40,12 +40,8 @@
             }
 
             echo($this->form($form));
-    
+            echo $this->link($this->url($data['backUri'], [], [], true), 'permits.button.return-to-overview');
         ?>
-        <a class="govuk-link govuk-body" href="<?php echo($this->url($data['backUri'], [], [], true)); ?>">
-            <?php echo $this->escapeHtml($this->translate('permits.button.return-to-overview')); ?>
-        </a>
-
     </div>
 
 </div>
