--- a/app/selfserve/module/Permits/view/permits/permits/irhp-permit-app-check-answers.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/irhp-permit-app-check-answers.phtml
@@ -35,7 +35,7 @@
                                 ];
                             }
 
-                            echo $this->link(
+                            echo $this->permitsCheckAnswerLink(
                                 $route,
                                 'common.link.change.label',
                                 $this->translate($row['question']),
