--- a/app/selfserve/module/Olcs/view/error/404.phtml
+++ b/app/selfserve/module/Olcs/view/error/404.phtml
@@ -11,7 +11,9 @@
       <div class="article">
         <?php echo $this->translate('markup-404-text'); ?>
         <hr>
-        <p><a href="<?php echo $this->url('index'); ?>"><?php echo $this->translate('back-to-home'); ?></a></p>
+        <p>
+            <?php echo $this->link($this->url('index'), 'back-to-home'); ?>
+        </p>
       </div>
     </div>
   </div>
