--- a/app/selfserve/module/Olcs/view/licence/surrender-licence-documents.phtml
+++ b/app/selfserve/module/Olcs/view/licence/surrender-licence-documents.phtml
@@ -18,6 +18,6 @@
             <?php echo $this->form($form); ?>
 
         </div>
-        <p><a href="<?php echo $returnLink;?>" title="return to previous step"><?php echo $this->translate($returnLinkText);?></a></p>
+        <p><a class="govuk-link" href="<?php echo $returnLink;?>" title="return to previous step"><?php echo $this->escapeHtml($this->translate($returnLinkText));?></a></p>
     </div>
 </div>
