--- a/app/selfserve/module/Olcs/view/pages/auth/forgot-password.phtml
+++ b/app/selfserve/module/Olcs/view/pages/auth/forgot-password.phtml
@@ -36,9 +36,9 @@
                         <?php echo $this->formElement($form->get('cancel')); ?>
                     </div>
                     <div class="actions-container">
-                        <a href="<?php echo $this->url('user-forgot-username'); ?>"
-                            aria-label="<?php echo $this->translate('auth.forgot-username.label.audio'); ?>">
-                            <?php echo $this->translate('auth.forgot-username.label'); ?>
+                        <a class="govuk-link" href="<?php echo $this->url('user-forgot-username'); ?>"
+                            aria-label="<?php echo $this->escapeHtmlAttr($this->translate('auth.forgot-username.label.audio')); ?>">
+                            <?php echo $this->escapeHtml($this->translate('auth.forgot-username.label')); ?>
                         </a>
                     </div>
                 </fieldset>
