--- a/app/selfserve/module/Olcs/view/pages/licence-vehicle.phtml
+++ b/app/selfserve/module/Olcs/view/pages/licence-vehicle.phtml
@@ -46,7 +46,7 @@
                     <?php
                     echo $this->form($this->searchForm);
                     ?>
-                    <p><a href="<?php echo $this->clearUrl; ?>" class="govuk-link">Clear search</a></p>
+                    <p><?php echo $this->link($this->clearUrl, 'Clear search'); ?></p>
                     <div class="govuk-phase-banner govuk-!-margin-bottom-8 govuk-!-margin-top-0"></div>
                 <?php endif; ?>
                 <?php if ($this->note): ?>
