--- a/app/selfserve/module/Olcs/view/partials/check-answer-change.phtml
+++ b/app/selfserve/module/Olcs/view/partials/check-answer-change.phtml
@@ -1,6 +1,6 @@
 <dd class="app-check-your-answers__change">
     <?php if ($this->sectionLink) : ?>
-        <a href="<?php echo $this->sectionLink; ?>">
+        <a class="govuk-link" href="<?php echo $this->sectionLink; ?>">
             <?php echo $this->translate('Change');?><span class="govuk-visually-hidden"><?php echo $this->translate($this->backText);?></span>
         </a>
     <?php endif; ?>
