--- a/app/selfserve/module/Olcs/view/partials/layout/top-level-navigation.phtml
+++ b/app/selfserve/module/Olcs/view/partials/layout/top-level-navigation.phtml
@@ -1,12 +1,12 @@
-<ul id="navigation" class="govuk-header__navigation" aria-label="<?php echo $this->escapeHtml($this->translate('top.level.navigation')); ?>"><?php
+<ul id="navigation" class="govuk-header__navigation-list" aria-label="<?php echo $this->escapeHtml($this->translate('top.level.navigation')); ?>">
+<?php
 
 foreach ($this->container as $page) {
   if ($page->isVisible() && $this->navigation()->menu()->accept($page)) {
+      $activeClass = $page->isActive() ? ' govuk-header__navigation-item--active' : '';
     ?>
-    <li class="govuk-header__navigation-item">
-      <a href="<?php echo $page->getHref(); ?>" class="govuk-header__link">
-        <?php echo $this->escapeHtml($this->translate($page->getLabel())); ?>
-      </a>
+    <li class="govuk-header__navigation-item<?php echo $activeClass; ?>">
+      <?php echo $this->link($page->getHref(), $page->getLabel(), 'govuk-header__link'); ?>
     </li>
     <?php
   }
