--- a/app/selfserve/module/Permits/view/permits/permits/confirmation.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/confirmation.phtml
@@ -14,7 +14,11 @@
             </div>
         </div>
         <?php if (!empty($data['receiptUrl'])) { ?>
-            <p><?php echo $this->translate('permits.page.confirmation.view.download'); ?> <a href="<?php echo $this->escapeHtmlAttr($data['receiptUrl']); ?>" class="govuk-link" target="_blank"><?php echo $this->translate('permits.page.confirmation.your.receipt'); ?><span class="govuk-visually-hidden">(link opens in a new window)</span></a>.</p><br />
+            <p>
+                <?php
+                    echo $this->escapeHtml($this->translate('permits.page.confirmation.view.download')) . ' ';
+                    echo $this->linkNewWindow($data['receiptUrl'], 'permits.page.confirmation.your.receipt');
+                ?>.</p><br />
         <?php } ?>
         <h2 class="govuk-heading-m">
             <?php echo $this->escapeHtml($this->translate($data['extraContent']['title'])); ?>
