--- a/app/selfserve/module/Permits/view/permits/permits/irhp-valid-permits.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/irhp-valid-permits.phtml
@@ -54,9 +54,7 @@ if (!empty($uniqueCountries)) {
         <?php echo $tables['valid-irhp-permits']; ?>
 
         <p class="govuk-body govuk-!-margin-top-4">
-            <a href="<?php echo $this->url('permits', [], [], true); ?>">
-                <?php echo $this->escapeHtml($this->translate('permits.link.return.to.dashboard')); ?>
-            </a>
+            <?php echo $this->link($this->url('permits', [], [], true), 'permits.link.return.to.dashboard'); ?>
         </p>
     </div>
 </div>
