--- a/app/internal/module/Olcs/view/layout/partials/breadcrumbs.phtml
+++ b/app/internal/module/Olcs/view/layout/partials/breadcrumbs.phtml
@@ -1,5 +1,5 @@
 <div class="govuk-breadcrumbs">
-<ol class="govuk-breadcrumbs__list">
+<ol class="govuk-breadcrumbs__list inline">
   <?php foreach ($this->pages as $key => $page): ?>
   <?php if ($key < count($this->pages) - 1): ?>
   <li class="govuk-breadcrumbs__list-item"><a class="govuk-breadcrumbs__link" href="<?php echo $page->getHref(); ?>"><?php echo $this->translate($page->getLabel()); ?></a></li>
