--- a/app/selfserve/module/Permits/view/partials/irhp-bilateral-fee-table.phtml
+++ b/app/selfserve/module/Permits/view/partials/irhp-bilateral-fee-table.phtml
@@ -1,5 +1,3 @@
-<h2 class="govuk-heading-s"><?php echo $this->translate('permits.page.bilateral.countries.fee.table.heading'); ?></h2>
-
 <ul class="govuk-list govuk-list--bullet">
     <li><?php echo $this->translate('permits.page.bilateral.countries.fee.table.bullet1'); ?></li>
     <li><?php echo $this->translate('permits.page.bilateral.countries.fee.table.bullet2'); ?></li>
@@ -7,24 +5,27 @@
 </ul>
 
 <table class="govuk-table">
+    <caption class="govuk-table__caption govuk-table__caption--m">
+        <?php echo $this->escapeHtml($this->translate('permits.page.bilateral.countries.fee.table.heading')); ?>
+    </caption>
     <thead class="govuk-table__head">
     <tr class="govuk-table__row">
         <th class="govuk-table__header" scope="col"><?php echo $this->escapeHtml($this->translate('permits.page.fee.permit.type')); ?></th>
-        <th class="govuk-table__header" scope="col"><?php echo $this->escapeHtml($this->translate('permits.page.fee.total.fee.per.permit')); ?></th>
+        <th class="govuk-table__header govuk-table__header--numeric" scope="col"><?php echo $this->escapeHtml($this->translate('permits.page.fee.total.fee.per.permit')); ?></th>
     </tr>
     </thead>
     <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
         <td class="govuk-table__cell"><?php echo $this->escapeHtml($this->translate('permits.irhp.bilateral.cabotage.journey')); ?></td>
-        <td class="govuk-table__cell"><?php echo $this->currencyFormatter(8); ?></td>
+        <td class="govuk-table__cell govuk-table__cell--numeric"><?php echo $this->currencyFormatter(8); ?></td>
     </tr>
     <tr class="govuk-table__row">
         <td class="govuk-table__cell"><?php echo $this->escapeHtml($this->translate('permits.irhp.bilateral.multi.journey')); ?></td>
-        <td class="govuk-table__cell"><?php echo $this->currencyFormatter(50); ?></td>
+        <td class="govuk-table__cell govuk-table__cell--numeric"><?php echo $this->currencyFormatter(50); ?></td>
     </tr>
     <tr class="govuk-table__row">
         <td class="govuk-table__cell"><?php echo $this->escapeHtml($this->translate('permits.irhp.bilateral.single.journey')); ?></td>
-        <td class="govuk-table__cell"><?php echo $this->currencyFormatter(8); ?></td>
+        <td class="govuk-table__cell govuk-table__cell--numeric"><?php echo $this->currencyFormatter(8); ?></td>
     </tr>
     </tbody>
 </table>
