VOL-3390 VOL-3201 switch search navigation links to the correct govuk-link class, add style to tm backlinks

--- a/app/selfserve/module/Olcs/view/pages/lva-tm-details-action.phtml
+++ b/app/selfserve/module/Olcs/view/pages/lva-tm-details-action.phtml
@@ -74,7 +74,7 @@ use Common\Util\Escape;
           <?php
           if (isset($this->backLink)): ?>
           <p>
-              <?php echo $this->link($this->backLink, $this->backText); ?>
+              <?php echo $this->link($this->backLink, $this->backText, 'govuk-back-link'); ?>
           </p>
           <?php endif; ?>
       </div>
