--- a/app/selfserve/module/Olcs/view/search/index.phtml
+++ b/app/selfserve/module/Olcs/view/search/index.phtml
@@ -19,8 +19,7 @@ echo $this->partial(
 
       echo $menu->setUlClass('search-navigation')
           ->setMinDepth(0)
-          ->setMaxDepth(0)
-          ->setAddClassToListItem();
+          ->setMaxDepth(0);
     ?>
   </div>
 
