--- a/app/selfserve/module/Olcs/view/pages/lva-tm-details-checkAnswers.phtml
+++ b/app/selfserve/module/Olcs/view/pages/lva-tm-details-checkAnswers.phtml
@@ -57,7 +57,7 @@ use Common\Util\Escape;
           <?php
           if (isset($this->backLink)): ?>
           <p>
-              <?php echo $this->link($this->backLink, $this->backText); ?>
+              <?php echo $this->link($this->backLink, $this->backText, 'govuk-back-link'); ?>
           </p>
           <?php endif; ?>
       </div>
