VOL-3369 stop GDS js code being triggered by tabs pattern

--- a/app/selfserve/module/Olcs/view/partials/tabs-nav.phtml
+++ b/app/selfserve/module/Olcs/view/partials/tabs-nav.phtml
@@ -1,4 +1,4 @@
-<div class="govuk-tabs" data-module="govuk-tabs">
+<div class="govuk-tabs">
   <ul class="govuk-tabs__list">
   <?php foreach ($this->container as $page): ?>
     <?php if ($page->isVisible(true) && $this->navigation()->accept($page, false)): ?>
