--- a/app/selfserve/module/Olcs/view/partials/tabs.phtml
+++ b/app/selfserve/module/Olcs/view/partials/tabs.phtml
@@ -1,4 +1,4 @@
-<div class="govuk-tabs" data-module="govuk-tabs">
+<div class="govuk-tabs">
     <ul class="govuk-tabs__list">
         <?php
         if (isset($this->tabs) && is_array($this->tabs)) {
