VOL-3419 replace VOL visually hidden with GDS equivalent

--- a/app/selfserve/module/Permits/view/permits/permits/irhp-application-overview.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/irhp-application-overview.phtml
@@ -13,7 +13,7 @@
             <p><?php echo $this->link($this->url('permits'), 'common.link.back-to-permits.label', 'govuk-back-link'); ?></p>
             <div class="page-header__wrapper">
                 <span class="govuk-caption-xl">
-                    <span class="visually-hidden"><?php echo($this->escapeHtml($this->translate('permits.application.overview.application.reference'))); ?></span>
+                    <span class="govuk-visually-hidden"><?php echo($this->escapeHtml($this->translate('permits.application.overview.application.reference'))); ?></span>
                     <?php echo $this->escapeHtml($application['applicationRef']); ?>
                 </span>
                 <h1 class="js-title">
