--- a/app/selfserve/module/Permits/view/permits/permits/confirmation.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/confirmation.phtml
@@ -7,7 +7,7 @@
             <div class="govuk-panel__body">
                 <?php echo $this->escapeHtml($this->translate('permits.page.confirmation.reference')); ?>
                 <br/>
-                <span class="visually-hidden">
+                <span class="govuk-visually-hidden">
                     <?php echo($this->escapeHtml($this->translate('permits.application.overview.application.reference'))); ?>
                 </span>
                 <strong><?php echo $this->escapeHtml($data['application']['applicationRef']); ?></strong>
