--- a/app/selfserve/module/Permits/view/permits/permits/irhp-candidate-permit-selection.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/irhp-candidate-permit-selection.phtml
@@ -7,7 +7,7 @@
     <div class="govuk-grid-column-two-thirds">
         <?php echo $this->formErrors($form); ?>
         <span class="govuk-caption-xl">
-            <span class="visually-hidden">
+            <span class="govuk-visually-hidden">
                 <?php echo($this->escapeHtml($this->translate('permits.application.overview.application.reference'))); ?>
             </span>
             <?php echo $this->escapeHtml($data['application']['applicationRef']); ?>
