--- a/app/selfserve/module/Permits/view/permits/permits/irhp-check-answers.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/irhp-check-answers.phtml
@@ -2,7 +2,7 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <span class="govuk-caption-xl">
-            <span class="visually-hidden">
+            <span class="govuk-visually-hidden">
                 <?php echo($this->escapeHtml($this->translate('permits.application.overview.application.reference'))); ?>
             </span>
             <?php echo $this->escapeHtml($data['application']['applicationRef']); ?>
